--- a/MemeMe/Info.plist
+++ b/MemeMe/Info.plist
@@ -45,5 +45,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>MemeMe needs permission to write photos.</string>
 </dict>
 </plist>
